# fastobo-owl

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: test.yml
ci/: codecov.yml
examples/: fastobo2owl.rs
src/: _context.rs  constants.rs  date.rs  doc.rs  error.rs  header.rs  id.rs  lib.rs  pv.rs  qualifier.rs  strings.rs  syn.rs  term.rs  utils.rs  xref.rs
src/imports/: mod.rs
src/into_owl/: date.rs  def.rs  doc.rs  header.rs  id.rs  mod.rs  pv.rs  qualifier.rs  strings.rs  syn.rs  term.rs  typedef.rs  xref.rs
tests/: into_owl.rs
tests/data/into_owl/: def_xref.input.obo  def_xref.output.owl  equivalent_to.input.obo  equivalent_to.output.owl  header.output.owl  intersection_of.input.obo  intersection_of.output.owl  is_a.input.obo  is_a.output.owl  name.input.obo  name.output.owl  property_value.input.obo  property_value.output.owl  qualifier.input.obo  qualifier.output.owl  subsetdef.input.obo  subsetdef.output.owl  synonym.input.obo  synonym.output.owl  typedef_shorthand.input.obo  typedef_shorthand.output.owl  union_of.input.obo  union_of.output.owl  version_iri.input.obo  version_iri.output.owl
