[package]
name = "fastobo-owl"
version = "0.1.2"
authors = ["Martin Larralde <martin.larralde@embl.de>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/fastobo/fastobo-owl"
homepage = "https://github.com/fastobo/fastobo-owl"
description = "OWL language mapping for ontologies in the OBO flat file format 1.4"
keywords = ["obo", "ontology", "obofoundry", "owl", "semantics"]
categories = ["science"]
exclude = ["tests/data/*"]

[badges.travis-ci]
repository = "fastobo/fastobo-owl"
[badges.is-it-maintained-issue-resolution]
repository = "fastobo/fastobo-owl"
[badges.maintenance]
status     = "actively-developed"

[dependencies]
curie = "0.1.1"
lazy_static = "1.3.0"
thiserror = "1.0.0"
[dependencies.fastobo]
version = "0.14.0"
default-features = false
features = ["threading"]
[dependencies.horned-owl]
version = "0.11.0"
default-features = false
[dependencies.horned-functional]
version = "0.4.0"
default-features = false

[dev-dependencies]
pretty_assertions = "1.0.0"

[[example]]
name = "fastobo2owl"
path = "examples/fastobo2owl.rs"
